core/calico/global-network-policy1.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-app-webhook-ingress
  namespace: cert-manager
spec:
  selector: app == 'webhook'
  types:
  - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    destination: 
      ports:
      - 443
    source: {}
